<resources>
    <string name="app_name">Inkopies</string>
    <string name="title_activity_login">Sign In</string>
    <string name="login_title">Log In</string>
    <string name="facebook_title">Facebook</string>
    <string name="gmail_title">Gmail</string>
    <string name="email_phone_title">Email/Phone</string>
    <string name="or_register_here">or register here</string>
    <string name="register_title">Register</string>
    <string name="email_or_phone">Email or phone</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="error_required_field">this field is required</string>
    <string name="error_password_too_short">Password must have 8 or more characters</string>
    <string name="error_bad_email_or_phone">Invalid email or phone number format</string>
    <string name="registering">Registering</string>
    <string name="loggin_in">Logging in</string>
    <string name="dismiss">Dismiss</string>
    <string name="title_activity_verify">Verify Login</string>
    <string name="verification_code_sent_to">Verification code sent to</string>
    <string name="pls_enter_it_here">please enter it here</string>
    <string name="verification_code">Verification code</string>
    <string name="resend">Resend</string>
    <string name="already_verified">I\'ve already verified</string>
    <string name="verify">Verify</string>
    <string name="verification_code_resent">Verification code has been resent</string>
    <string name="send_ver_code_to">Send verification code to</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_profile">Profile</string>
    <string name="avatar">Avatar</string>
    <string name="email_label">Email:</string>
    <string name="name_label">Name:</string>
    <string name="phone_label">Phone:</string>
    <string name="error_invalid_login">invalid login</string>
    <string name="error_invalid_or_expired_verif_code">The verification code is invalid or expired</string>
    <string name="error_used_verif_code">The verification code is used</string>
    <string name="resend_in_s_min_s_sec">Resend in %02d:%02d</string>
    <string name="please_log_in">Please log in</string>
    <string name="ss_was_invalid">%s was invalid</string>
    <string name="ss_in_use">%s is already in use</string>
    <string name="error_something_wicked">Something wicked happened, please try again</string>
    <string name="error_couldnt_reach_server">Couldn\'t reach server, please try again</string>
    <string name="verifying_ss">Verifying %s</string>
    <string name="updating_login_details_to_ss">Updating login details to %s</string>
    <string name="sending_verification_code">Sending verification code</string>
    <string name="checking_ss_verified">Checking %s verified</string>
    <string name="link_google">Link google</string>
    <string name="link_facebook">Link facebook</string>
    <string name="edit_general_user_details">Edit general user details</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="profile_photo_title">Profile Photo</string>
    <string name="name">Name</string>
    <string name="name_required_label">Name*</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="gender_label">Gender:</string>
    <string name="updating_profile">Updating profile</string>
    <string name="please_install_camera">Please install a camera app</string>
    <string name="file_provider_authorities">com.example.android.fileprovider</string>
    <string name="forbidden_res_access">You do not have access to this resource</string>
    <string name="log_in_again">Please log in again</string>
    <string name="list_label">List:</string>
    <string name="cart_label">Cart:</string>
    <string name="empty_shopping_lists_text">Your shopping lists will appear here when you add them</string>
    <string name="creating_shopping_list">Creating shopping list</string>
    <string name="shopping_lists_title">Shopping Lists</string>
    <string name="new_shopping_list_title">New Shopping List</string>
    <string name="empty_items_text">Your items will appear here when you add them</string>
    <string name="times">X</string>
    <string name="delete">Delete</string>
    <string name="brand">Brand</string>
    <string name="quantity">Quantity</string>
    <string name="measuring_unit_title">Measuring Unit</string>
    <string name="price">Price</string>
    <string name="edit_item_title">Edit Item</string>
    <string name="new_item_title">New Item</string>
    <string name="saving_item">Saving item</string>
    <string name="add_to_list">Add to list</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="plan_caps">PLAN</string>
    <string name="go_shopping_caps">GO SHOPPING</string>
    <string name="checkout_caps">CHECKOUT</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="feature_not_implemented">feature not implemented</string>
    <string name="add_another">Add another</string>
    <string name="export">Export</string>
    <string name="export_successful">Export completed successfully</string>
    <string name="external_storage_unavailable">External storage not available, please try again</string>
    <string name="error_writing_lists_to_csv">Unable to write shopping lists to CSV</string>
    <string name="error_writing_list_items_to_csv">Unable to export shopping list items</string>
    <string name="export_lists_title">Export Lists</string>
    <string name="export_list_title">Export List</string>
    <string name="allow_storage_access_to_export">Allow the app to access your device storage in order to export</string>
    <string name="category">Category</string>
    <string name="import_lists_title">Import Lists</string>
    <string name="import_successful">Import completed successfully</string>
    <string name="error_reading_csv">Unable to read CSV file</string>
    <string name="csv_missing_itemName">missing itemName in CSV file</string>
    <string name="sign_in_title">Sign In</string>
    <string name="sign_in_to_get_the_most_out_of_inkopies">Sign in to get the most out of Inkopies.</string>
    <string name="or_social_media">Or using social media</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="next">Next</string>
    <string name="checking_ss">Checking %s</string>
    <string name="set_your_password">Set your password</string>
    <string name="invalid_email">The email provided is not valid</string>
    <string name="title_activity_checkout">Checkout</string>
    <string name="store">Store</string>
    <string name="branch">Branch</string>
    <string name="checkout_date_title">Checkout Date</string>
    <string name="checking_out">Checking out…</string>
    <string name="login_to_a_different_account">Login to a different account</string>
    <string name="edit_general_profile_title">Edit General Profile</string>
    <string name="show_details">Show details</string>
    <string name="name_required_and_in_list">Name* (in list)</string>
    <string name="name_required_and_in_cart">Name* (in cart)</string>
</resources>
