<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/fb_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_small"
            android:layout_marginEnd="@dimen/space_small"
            android:layout_marginStart="@dimen/space_small"
            android:text="@string/facebook_title" />

        <Button
            android:id="@+id/gmail_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_small"
            android:layout_marginEnd="@dimen/space_small"
            android:layout_marginStart="@dimen/space_small"
            android:text="@string/gmail_title" />

        <Button
            android:id="@+id/manual_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_small"
            android:layout_marginEnd="@dimen/space_small"
            android:layout_marginStart="@dimen/space_small"
            android:text="@string/email_phone_title" />

    </LinearLayout>
</layout>