<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="ke.co.definition.inkopies.presentation.profile.GeneralProfileViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/layoutRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/contentRoot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameLayout"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_small"
                app:error="@{vm.nameError}"
                app:layout_constraintBottom_toTopOf="@id/gender"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:text="@={vm.name}" />

            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_small"
                app:layout_constraintBottom_toTopOf="@+id/cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameLayout">

                <TextView
                    android:id="@+id/genderLabel"
                    android:layout_width="@dimen/label_width"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_label"
                    app:layout_constraintBottom_toTopOf="@id/cancel"
                    app:layout_constraintTop_toBottomOf="@id/nameLayout" />

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other" />

                <TextView
                    android:id="@+id/genderError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{vm.genderError}"
                    android:textColor="@color/colorError"
                    android:visibility="@{vm.genderError.isEmpty() ? View.GONE : View.VISIBLE}"
                    tools:text="@string/error_required_field" />

            </RadioGroup>

            <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/submit"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gender" />

            <Button
                android:id="@+id/submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                app:layout_constraintBaseline_toBaselineOf="@id/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancel"
                app:layout_constraintTop_toTopOf="@id/cancel" />

        </android.support.constraint.ConstraintLayout>

        <include
            android:id="@+id/progressArea"
            layout="@layout/progress_area"
            android:visibility="@{vm.progressOverlay.show ? View.VISIBLE : View.GONE}"
            bind:text="@{vm.progressOverlay.text}"
            tools:visibility="gone" />
    </FrameLayout>
</layout>