<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="ke.co.definition.inkopies.presentation.shopping.lists.NewShoppingListViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutRoot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/space_normal">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_normal"
                android:text="@string/new_shopping_list_title"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_large"
                app:layout_constraintBottom_toTopOf="@id/nameLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameLayout"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_normal"
                app:error="@{vm.nameError}"
                app:layout_constraintBottom_toTopOf="@id/cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:imeOptions="actionDone"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:text="@={vm.name}" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/submit"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameLayout" />

            <Button
                android:id="@+id/submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                app:layout_constraintBaseline_toBaselineOf="@id/cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/progressArea"
            layout="@layout/progress_area"
            bind:data="@{vm.progress}"
            tools:visibility="gone" />

    </FrameLayout>
</layout>