<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="ke.co.definition.inkopies.presentation.verification.UpdateIdentifierViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/layoutRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/contentRoot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/title"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="@dimen/space_small"
                android:paddingLeft="@dimen/space_small"
                android:paddingRight="@dimen/space_small"
                android:text="@string/send_ver_code_to"
                app:layout_constraintBottom_toTopOf="@id/identifierLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/identifierLayout"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/space_small"
                android:paddingLeft="@dimen/space_small"
                android:paddingRight="@dimen/space_small"
                app:error="@{vm.identifierError}"
                app:layout_constraintBottom_toTopOf="@id/cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title">

                <EditText
                    android:id="@+id/identifier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/email_or_phone"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:text="@={vm.identifier}" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/space_small"
                android:paddingLeft="@dimen/space_small"
                android:paddingRight="@dimen/space_small"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/submit"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/identifierLayout" />

            <Button
                android:id="@+id/submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/space_small"
                android:paddingLeft="@dimen/space_small"
                android:paddingRight="@dimen/space_small"
                android:text="@string/submit"
                app:layout_constraintBaseline_toBaselineOf="@id/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancel"
                app:layout_constraintTop_toTopOf="@id/cancel" />

        </android.support.constraint.ConstraintLayout>

        <include
            android:id="@+id/progressArea"
            layout="@layout/progress_area"
            android:visibility="@{vm.progressOverlay.show ? View.VISIBLE : View.GONE}"
            bind:text="@{vm.progressOverlay.text}"
            tools:visibility="gone" />
    </FrameLayout>
</layout>